# docs_on_docs

./: .gitignore  README.rst  setup.cfg  test-requirements.txt  tox.ini  zuul.yaml
doc/: requirements.txt
doc/source/: account creation  account_creation.rst  approver.rst  change_proposal_process.rst  code_editors.rst  conf.py  git_account.rst  index.rst  migration.rst  reviewer.rst  rst.rst  structure.rst  working-with-github.rst
doc/source/_static/: custom.css  reveal_theme_otc.css
doc/source/_static/js/: reveal_ext.js
doc/source/presentations/: ansible_collections.rst  index.rst  introduction.rst  vault_openstack.rst
doc/source/presentations/ansible/: ansible-play.yaml  ansible_collections.rst
doc/source/presentations/intro/: introduction.rst
doc/source/presentations/sandbox/: sandbox.rst
doc/source/presentations/usercreate/: createusers.rst
