[metadata]
name = docs_on_docs
summary = Documentation about documentation
description_file =
    README.rst
author = Open Telekom Cloud Ecosystem team
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    OpenStack, Open Telekom Cloud, otc, T-Systems, Telekom
